final-devops-project/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notes
  labels:
    app.kubernetes.io/part-of: final-devops-project
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
